--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -26,57 +26,57 @@
 					<div class="control-group string optional project_company_name">
 						<label class="string optional control-label" for="project_company_attributes_name">Company Name</label>
 						<div class="controls">
-							<input class="string optional" id="project_company_attributes_name" name="project[company_attributes][name]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_name" name="project[company_name]" size="50" type="text">
 						</div>
 					</div>
 					<h5>Technical Contact</h5>
 					<div class="control-group string optional project_company_technical_name">
 						<label class="string optional control-label" for="project_company_attributes_technical_name">Name</label>
 						<div class="controls">
-							<input class="string optional" id="project_company_attributes_technical_name" name="project[company_attributes][technical_name]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_technical_name" name="project[company_technical_name]" size="50" type="text">
 						</div>
 					</div>
 					<div class="control-group string optional project_company_technical_designation">
 						<label class="string optional control-label" for="project_company_attributes_technical_designation">Designation</label>
 						<div class="controls">
-							<input class="string optional" id="project_company_attributes_technical_designation" name="project[company_attributes][technical_designation]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_technical_designation" name="project[company_technical_designation]" size="50" type="text">
 						</div>
 					</div>
 					<div class="control-group email optional project_company_technical_email">
 						<label class="email optional control-label" for="project_company_attributes_technical_email">Email</label>
 						<div class="controls">
-							<input class="string email optional" id="project_company_attributes_technical_email" name="project[company_attributes][technical_email]" size="50" type="email">
+							<input class="string email optional" id="project_company_attributes_technical_email" name="project[company_technical_email]" size="50" type="email">
 						</div>
 					</div>
 					<div class="control-group tel optional project_company_technical_name">
 						<label class="tel optional control-label" for="project_company_attributes_technical_name">Phone Number</label>
 						<div class="controls">
-							<input class="string tel optional" id="project_company_attributes_technical_name" name="project[company_attributes][technical_name]" size="50" type="tel">
+							<input class="string tel optional" id="project_company_attributes_technical_name" name="project[company_technical_name]" size="50" type="tel">
 						</div>
 					</div>
 					<h5>Director Contact</h5>
 					<div class="control-group string optional project_company_director_name">
 						<label class="string optional control-label" for="project_company_attributes_director_name">Name</label>
 						<div class="controls">
-							<input class="string optional" id="project_company_attributes_director_name" name="project[company_attributes][director_name]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_director_name" name="project[company_director_name]" size="50" type="text">
 						</div>
 					</div>
 					<div class="control-group string optional project_company_director_designation">
 						<label class="string optional control-label" for="project_company_attributes_director_designation">Designation</label>
 						<div class="controls">
-							<input class="string optional" id="project_company_attributes_director_designation" name="project[company_attributes][director_designation]" size="50" type="text">
+							<input class="string optional" id="project_company_attributes_director_designation" name="project[company_director_designation]" size="50" type="text">
 						</div>
 					</div>
 					<div class="control-group email optional project_company_director_email">
 						<label class="email optional control-label" for="project_company_attributes_director_email">Email</label>
 						<div class="controls">
-							<input class="string email optional" id="project_company_attributes_director_email" name="project[company_attributes][director_email]" size="50" type="email">
+							<input class="string email optional" id="project_company_attributes_director_email" name="project[company_director_email]" size="50" type="email">
 						</div>
 					</div>
 					<div class="control-group tel optional project_company_director_name">
 						<label class="tel optional control-label" for="project_company_attributes_director_name">Phone Number</label>
 						<div class="controls">
-							<input class="string tel optional" id="project_company_attributes_director_name" name="project[company_attributes][director_name]" size="50" type="tel">
+							<input class="string tel optional" id="project_company_attributes_director_name" name="project[company_director_name]" size="50" type="tel">
 						</div>
 					</div>
 				</div>
@@ -137,15 +137,15 @@
 					</div>
 					<div class="control-group boolean optional project_company_email_conf">
 						<div class="controls">
-						<input name="project[company_attributes][email_conf]" type="hidden" value="0">
+						<input name="project[company_email_conf]" type="hidden" value="0">
 						<label class="checkbox">
-							<input checked="checked" class="boolean optional" id="project_company_attributes_email_conf" name="project[company_attributes][email_conf]" type="checkbox" value="1">"Receive Email Confirmation"
+							<input checked="checked" class="boolean optional" id="project_company_attributes_email_conf" name="project[email_conf]" type="checkbox" value="1">"Receive Email Confirmation"
 						</label>
 						</div>
 					</div>
 				</div>
 				<div class="form-actions">
-					<input class="btn btn-primary" name="online" type="submit" value="Create Project">
+					<input class="btn btn-primary" name="commit" type="submit" value="Create Project">
 					<a href="/" class="btn btn-link">cancel</a>
 				</div>
 			</form>
