Solved team sorting issue using an HTML trick. See comments in /teams.

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -10,7 +10,7 @@
 <!--This form effectively "refreshes" the page, populating the query string in the html bar-->
 <!--with a sort method corresponding to the user-chosen one, which ruby parses with the method above--> 
 <form id="sort-method-form" method="get" action="/teams">
-	<input type="hidden" name="sort-method" id="hidden-sort-method" value="3" />
+	<input type="hidden" name="sort-method" id="hidden-sort-method" value="team_name" />
 </form>
 
 <h1>Listing teams</h1>
