--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -109,7 +109,7 @@
 							</p>
 						</div>
 						<div class="col-md-6">
-							<button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-team-poc-modal" style="float:right">
+							<button type="button" class="btn btn-default" data-toggle="modal" data-target="" style="float:right">
 								Edit
 							</button>
 						</div>
@@ -124,7 +124,7 @@
 							<h4 class="list-group-item-heading">Point of Contact</h4>
 							<p class="list-group-item-text">
 							<% point_of_contact = team.point_of_contact %>
-							<% if !point_of_contact.nil? and point_of_contact.id != @student.id %>
+							<% if !point_of_contact.nil? and point_of_contact != current_student %>
 								<strong>Name:</strong> <%= point_of_contact.first_name + ' ' + point_of_contact.last_name %><br />
 								<strong>Email:</strong> <%= point_of_contact.email %>
 							<% else %>
@@ -133,7 +133,7 @@
 							</p>
 						</div>
 						<div class="col-md-6">
-						<% if @student.id == team.point_of_contact_id %>
+						<% if current_student == team.point_of_contact %>
 							<button type="button" class="btn btn-default" data-toggle="modal" data-target="#edit-team-poc-modal" style="float:right">
 								Edit
 							</button>
