--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -62,7 +62,7 @@
     <%= f.hidden_field :student_id, value: @current_student.id %>
     <%= f.hidden_field :team_accepted, value: false %>
     <%= f.hidden_field :student_accepted, value: true %>
-    <%= f.submit %>
+    <%= f.submit "Send Join Request" %>
   <% end %>
 <% end %>
 
