--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -56,12 +56,8 @@
   </div>
 </div>
   
-<% if logged_in? && !on_team?(@team) %>
-  <%= form_for JoinTeamContract.new do |f| %>
-    <%= f.hidden_field :team_id, value: @team.id %>
-    <%= f.hidden_field :student_id, value: @current_student.id %>
-    <%= f.hidden_field :team_accepted, value: false %>
-    <%= f.hidden_field :student_accepted, value: true %>
+<% if logged_in? && !on_team?(current_student, @team) %>
+  <%= form_for request_to_join_team(current_student, @team) do |f| %>
     <%= f.submit "Send Join Request" %>
   <% end %>
 <% end %>
